<resources>
    <string name="app_name">Assignment1</string>
    <string name="schedule_meeting">Schedule Meeting</string>
    <string name="name">Name : </string>
    <string name="enter_the_name">Enter The Name</string>
    <string name="_11_30">11.30</string>
    <string name="tue_22_december_2020">Tue- 22 December 2020</string>
    <string name="people_to_invite">People to Invite : </string>
    <string name="pratshukla">\@pratshukla</string>
    <string name="pratheek_shukla">Pratheek shukla</string>
    <string name="jeff_bezos">jeff bezos</string>
    <string name="jeffbezos">\@jeffbezos</string>
    <string name="notify_people_on_slack">Notify people on slack ?</string>
</resources>